login page in continuation

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,9 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="etBgEnd">#41000000</color>
+    <color name="etBgStart">#7FFFFFFF</color>
+    <color name="startColor">#CBCCCE</color>
+    <color name="endColor">#3F5EFF</color>
+    <color name="cardColor">#49FFFFFF</color>
 </resources>
