--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,7 +77,7 @@
             android:layout_width="330dp"
             android:layout_height="50dp"
             android:layout_marginTop="280dp"
-
+            android:layout_gravity="center_horizontal"
             />
     </androidx.cardview.widget.CardView>
 </LinearLayout>
