--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
 
     <androidx.cardview.widget.CardView
         android:layout_width="350sp"
-        android:layout_height="350dp"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/cardColor"
         app:cardCornerRadius="20sp"
         android:elevation="40dp"
@@ -78,6 +78,46 @@
             android:layout_height="50dp"
             android:layout_marginTop="280dp"
             android:layout_gravity="center_horizontal"
+            android:background="@drawable/btn_bg"
+            android:text="Login"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="25sp"
+            android:fontFamily="serif"
+            />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="OR"
+            android:textSize="25sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:fontFamily="serif"
+            android:layout_marginTop="350dp"
+            android:layout_gravity="center_horizontal"
+            />
+        <androidx.appcompat.widget.AppCompatButton
+            android:layout_width="330dp"
+            android:layout_height="50dp"
+            android:layout_marginTop="400dp"
+            android:layout_gravity="center_horizontal"
+            android:background="@drawable/btn_bg_normal"
+            android:text="Continue with Google "
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:textSize="15sp"
+            android:fontFamily="serif"
+            android:layout_marginBottom="10sp"
             />
     </androidx.cardview.widget.CardView>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New user? Click here..."
+        android:textSize="20sp"
+        android:textColor="@color/black"
+        android:fontFamily="serif"
+        android:textStyle="bold"
+        android:layout_marginTop="15dp"
+        android:layout_marginBottom="15dp"/>
 </LinearLayout>
