--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,120 +1,137 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/llLogin"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:background="@drawable/bg_color"
-    android:gravity="center_horizontal">
-
-    <TextView
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-        android:text="Login Here"
-        android:textSize="35sp"
-        android:textColor="@color/black"
-        android:textStyle="bold"
-        android:fontFamily="serif"
-        android:layout_marginTop="100dp"
-        android:layout_marginBottom="15dp"/>
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="350sp"
-        android:layout_height="wrap_content"
-        android:backgroundTint="@color/cardColor"
-        app:cardCornerRadius="20sp"
-        android:elevation="40dp"
-
-        >
+    android:gravity="center_horizontal"
+    >
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Username"
-        android:textSize="15sp"
+        android:text="Login Here"
+        android:textSize="25sp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:fontFamily="serif"
-        android:layout_marginStart="30dp"
-        android:layout_marginTop="20dp"
-        />
+        android:layout_marginTop="60dp"
+        android:layout_marginBottom="15dp"/>
 
-        <EditText
-            android:layout_width="330dp"
-            android:layout_height="50dp"
-            android:background="@drawable/et_bg"
-            android:hint="Enter username"
-            android:paddingStart="10dp"
-            android:drawableStart="@drawable/username"
-            android:inputType="textPassword"
-            android:layout_marginTop="50dp"
-            android:layout_gravity="center_horizontal"/>
+    <androidx.cardview.widget.CardView
+        android:layout_width="300sp"
+        android:layout_height="wrap_content"
+        android:backgroundTint="@color/cardColor"
+        app:cardCornerRadius="20sp"
+        >
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Passward"
-            android:textSize="15sp"
+            android:text="Username"
+            android:textSize="10sp"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:fontFamily="serif"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="110dp"
+            android:layout_marginTop="20dp"
             />
 
         <EditText
-            android:layout_width="330dp"
-            android:layout_height="50dp"
+            android:id="@+id/login_username"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
+            android:background="@drawable/et_bg"
+            android:hint="Enter username"
+            android:textColorHint="@color/etBgEnd"
+            android:textSize="15sp"
+            android:fontFamily="serif"
+            android:paddingStart="10dp"
+            android:drawableStart="@drawable/username"
+            android:inputType="text"
+            android:layout_marginTop="40dp"
+            android:layout_gravity="center_horizontal"
+            android:textColor="@color/black"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Passward"
+            android:textSize="10sp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:fontFamily="serif"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="90dp"
+            />
+
+        <EditText
+            android:id="@+id/login_passward"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
             android:background="@drawable/et_bg"
             android:hint="Enter passward"
+            android:textSize="15sp"
+            android:fontFamily="serif"
+            android:textColorHint="@color/etBgEnd"
             android:paddingStart="10dp"
             android:drawableStart="@drawable/password"
             android:inputType="textPassword"
             app:endIconMode="password_toggle"
-            android:layout_marginTop="140dp"
-            android:layout_gravity="center_horizontal"/>
+            android:layout_marginTop="110dp"
+            android:layout_gravity="center_horizontal"
+            tools:ignore="InvalidId"
+            android:textColor="@color/black"/>
 
         <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="330dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="280dp"
+            android:id="@+id/btn_login"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="250dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/btn_bg"
             android:text="Login"
             android:textColor="@color/white"
             android:textStyle="bold"
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:fontFamily="serif"
             />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="OR"
-            android:textSize="25sp"
+            android:textSize="15sp"
             android:textColor="@color/black"
             android:textStyle="bold"
             android:fontFamily="serif"
-            android:layout_marginTop="350dp"
+            android:layout_marginTop="300dp"
             android:layout_gravity="center_horizontal"
             />
         <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="330dp"
-            android:layout_height="50dp"
-            android:layout_marginTop="400dp"
+            android:id="@+id/btn_google"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
+            android:layout_marginTop="330dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/btn_bg_normal"
             android:text="Continue with Google "
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:textSize="15sp"
+            android:textSize="10sp"
             android:fontFamily="serif"
-            android:layout_marginBottom="10sp"
+            android:layout_marginBottom="20sp"
+            android:drawableStart="@drawable/google_logo"
+            android:paddingStart="40sp"
             />
     </androidx.cardview.widget.CardView>
     <TextView
+        android:id="@+id/login_newuser"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="New user? Click here..."
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:textColor="@color/black"
         android:fontFamily="serif"
         android:textStyle="bold"
