--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/llRegistration"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -12,18 +13,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign In Here"
-        android:textSize="35sp"
+        android:textSize="25sp"
         android:textColor="@color/black"
         android:textStyle="bold"
         android:fontFamily="serif"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="60dp"
         android:layout_marginBottom="15dp"/>
 
     <androidx.cardview.widget.CardView
-        android:layout_width="350sp"
-        android:layout_height="543dp"
+        android:layout_width="300sp"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/cardColor"
-        android:elevation="40dp"
         app:cardCornerRadius="20sp">
 
         <TextView
@@ -34,117 +34,142 @@
             android:fontFamily="serif"
             android:text="Name"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="10sp"
             android:textStyle="bold" />
 
         <EditText
-            android:layout_width="330dp"
-            android:layout_height="50dp"
+            android:id="@+id/signin_name"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="40dp"
             android:background="@drawable/et_bg"
             android:hint="Enter name"
-            android:inputType="textPassword"
-            android:paddingStart="10dp" />
+            android:inputType="text"
+            android:paddingStart="10dp"
+            android:textSize="15sp"
+            android:fontFamily="serif"
+            android:textColorHint="@color/etBgEnd"
+            android:textColor="@color/black"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="110dp"
+            android:layout_marginTop="90dp"
             android:fontFamily="serif"
             android:text="Mobile No"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="10sp"
             android:textStyle="bold" />
 
         <EditText
-            android:layout_width="330dp"
-            android:layout_height="50dp"
+            android:id="@+id/signin_mobileno"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="140dp"
+            android:layout_marginTop="110dp"
             android:background="@drawable/et_bg"
             android:hint="Enter Mobile no"
-            android:inputType="textPassword"
+            android:inputType="number"
+            android:maxLength="10"
             android:paddingStart="10dp"
-            app:endIconMode="password_toggle" />
+            android:textSize="15sp"
+            android:fontFamily="serif"
+            android:textColorHint="@color/etBgEnd"
+            android:textColor="@color/black"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="200dp"
+            android:layout_marginTop="160dp"
             android:fontFamily="serif"
             android:text="Email id"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="10sp"
             android:textStyle="bold" />
 
         <EditText
-            android:layout_width="330dp"
-            android:layout_height="50dp"
+            android:id="@+id/signin_emailid"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="230dp"
+            android:layout_marginTop="180dp"
             android:background="@drawable/et_bg"
             android:hint="Enter Email id"
-            android:inputType="textPassword"
-            android:paddingStart="10dp" />
+            android:inputType="textEmailAddress"
+            android:paddingStart="10dp"
+            android:textSize="15sp"
+            android:fontFamily="serif"
+            android:textColorHint="@color/etBgEnd"
+            android:textColor="@color/black"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="290dp"
+            android:layout_marginTop="230dp"
             android:fontFamily="serif"
             android:text="Username"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="10sp"
             android:textStyle="bold" />
 
         <EditText
-            android:layout_width="330dp"
-            android:layout_height="50dp"
+            android:id="@+id/signin_username"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="320dp"
+            android:layout_marginTop="250dp"
             android:background="@drawable/et_bg"
             android:hint="Enter Username"
-            android:inputType="textPassword"
+            android:inputType="text"
             android:paddingStart="10dp"
-            app:endIconMode="password_toggle" />
+            android:textSize="15sp"
+            android:fontFamily="serif"
+            android:textColorHint="@color/etBgEnd"
+            android:textColor="@color/black"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="30dp"
-            android:layout_marginTop="380dp"
+            android:layout_marginTop="300dp"
             android:fontFamily="serif"
             android:text="Passward"
             android:textColor="@color/black"
-            android:textSize="15sp"
+            android:textSize="10sp"
             android:textStyle="bold" />
 
         <EditText
-            android:layout_width="330dp"
-            android:layout_height="50dp"
+            android:id="@+id/signin_passward"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="410dp"
+            android:layout_marginTop="320dp"
             android:background="@drawable/et_bg"
             android:hint="Enter passward"
             android:inputType="textPassword"
             android:paddingStart="10dp"
-            app:endIconMode="password_toggle" />
+            android:textSize="15sp"
+            android:fontFamily="serif"
+            android:textColorHint="@color/etBgEnd"
+            android:textColor="@color/black" />
 
         <androidx.appcompat.widget.AppCompatButton
-            android:layout_width="300dp"
-            android:layout_height="50dp"
+            android:id="@+id/btn_confirm"
+            android:layout_width="260dp"
+            android:layout_height="40dp"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="475dp"
+            android:layout_marginTop="450dp"
             android:background="@drawable/btn_bg"
             android:fontFamily="serif"
-            android:text="Sign In"
+            android:text="Confirm"
             android:textColor="@color/white"
-            android:textSize="25sp"
-            android:textStyle="bold" />
+            android:textSize="15sp"
+            android:textStyle="bold"
+            android:layout_marginBottom="20sp"/>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
 
