--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".HomeActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/white">
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="0sp"
@@ -19,7 +20,7 @@
         android:layout_weight="10"
         android:id="@+id/homeBottomNavIconView"
         app:menu="@menu/home_bottom_nav"
-
+        android:background="@color/white"
         />
 
 </LinearLayout>
