--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -4,10 +4,86 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".Fragments.HomeFragment">
+    tools:context=".Fragments.HomeFragment"
+    >
+<ScrollView
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
+    <com.denzcoskun.imageslider.ImageSlider
+        android:layout_width="335dp"
+        android:layout_height="210dp"
+        android:id="@+id/isMyCartImageSlider"
+        app:iss_auto_cycle="true"
+        app:iss_period="2000"
+        app:iss_delay="2000"
+        app:iss_text_align="CENTER"
+        app:iss_text_color="#000000"
+        app:iss_selected_dot="@drawable/default_selected_dot"
+        app:iss_unselected_dot="@drawable/default_unselected_dot"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="10sp"
+        />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Purchased Internship"
+        android:textSize="15dp"
+        android:fontFamily="serif"
+        android:layout_marginTop="15sp"
+        android:layout_marginStart="10sp"
+        android:textColor="@color/black"
+        />
 
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:focusable="false"
+        android:importantForAccessibility="no">
 
+        <GridLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/glHomeFragment"
+            android:padding="8dp"
+            android:orientation="horizontal"
+            android:rowCount="1"
+            />
+
+    </HorizontalScrollView>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Latest Technologies"
+        android:textSize="15dp"
+        android:fontFamily="serif"
+        android:layout_marginTop="15sp"
+        android:layout_marginStart="10sp"
+        android:textColor="@color/black"
+        />
+    <HorizontalScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:focusable="false"
+        android:importantForAccessibility="no">
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/glHomeFragment1"
+        android:padding="8dp"
+        android:orientation="horizontal"
+        android:rowCount="1"
+        />
+    </HorizontalScrollView>
+</LinearLayout>
+</ScrollView>
 
 
 
