--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,5 +4,7 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
-    <style name="Theme.SkillBridge" parent="Theme.Material3.DayNight" />
+    <style name="Theme.SkillBridge" parent="Theme.Material3.DayNight" >
+        <item name="titleTextColor">@color/black</item>
+    </style>
 </resources>
